# avantee

./: .gitignore  CMakeLists.txt  README.md
include/: generic_sockets.hpp
include/socket/: error_utils.hpp  generic_sockets.hpp  socket.hpp  sockets.hpp
lib/socket/: error_utils.cpp  error_utils.hpp  generic_sockets.cpp  socket.cpp  sockets.cpp
src/: avantee-server.cpp  client.cpp  generic_sockets.cpp  multiplexer.cpp  multiplexer.hpp  server.cpp  testing.cpp  tftp.cpp  tftp.hpp
testing/: CMakeLists.txt  CREDIT  simple-client.cpp  simple-server.cpp  test-client.cpp  test-server.cpp
